# server_client_c

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: client.c
common/: CMakeLists.txt
common/include/: endianness.h  protocol.h
common/src/: endianness.c  protocol.c
server/: CMakeLists.txt
server/include/: client_handler.h
server/src/: client_handler.c  server.c
